--- a/views/newproject.ejs
+++ b/views/newproject.ejs
@@ -15,6 +15,7 @@ NB: from the form, it's the name that's gonna be parsed. "id" is used in the DOM
             name: <input type="text" id="name" name="name" /><br /> 
             category: <input type="text" id="category" name="category" /><br />
             description: <input type="text" id="description" name="description" /><br />
+            image: <input type="file", id="img" name="img" </br>
             <input type="submit" value="submit" />
         </form>
     </body>
