--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,13 +17,15 @@ Sort of vitrine website and will let you signup and login etc ...
         </br>
         <% if (auth) { %>
         <a href="/logout"> <button type="button"> logout </button> </a> <%} %>
+        </br>
+        <% if (auth) { %>
+        <a href='/profile/<%= username %>'> <button type="button"> profile </button> </a> <%} %>        
         
         </br>
             <h1> Check all the projects that we have </h1>
-    <body> 
+            
         <% for(i=0; i<count; i++)  {%> 
         <a href='/projects/<%= projects[i].name %>'> </br> <button type="submit"><%= projects[i].name %>  <% } %> </button> 
     </body>
 
-    </body>
 </html>
