--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,7 +22,7 @@ Sort of vitrine website and will let you signup and login etc ...
         <a href='/profile/<%= username %>'> <button type="button"> profile </button> </a> <%} %>        
         
         </br>
-            <h1> Check all the projects that we have </h1>
+            <h1> 10 Most popular projects </h1>
             
         <% for(i=0; i<count; i++)  {%> 
         <a href='/projects/<%= projects[i].name %>'> </br> <button type="submit"><%= projects[i].name %>  <% } %> </button> 
