--- a/views/singleprojectpage.ejs
+++ b/views/singleprojectpage.ejs
@@ -4,31 +4,52 @@ Sort of vitrine website and will let you signup and login etc ...
  -->
 
 <html>
-<h1> Hello, this is  <%=project.name %> project</h1>
+<h1> Hello, this is
+    <%=project.name %> project</h1>
 
 <body>
-    Edition: <%= project.edition %>
-    </br>
-    Led by <%= project.leader %>
-    </br>
-    since <%= moment(project.created_at).format('DD/MM/YY') %> </br>
-    </br>
-    It consists in : <%= project.description %>
-    </br>
-    We think it's part of this category: <%= project.category %>
-    </br>
-    </br>
-    </br>
-    Check out all the other members
-    <% for(i=0; i<count_members; i++) {%>  <!-- ici ce sera les photos des membres qui s'afficheront au liejisdjqdddllu d'un bouton -->
-    <a href='/profile/<%= project.members_array[i] %>'> <button type="submit"><%= project.members_array[i] %> </button> </a> </br> </br> <%  } %>
+    Edition:
+    <%= project.edition %>
+        </br>
+        Led by
+        <%= project.leader %>
+            </br>
+            since
+            <%= moment(project.created_at).format('DD/MM/YY') %>
+                </br>
+                </br>
+                It consists in :
+                <%= project.description %>
+                    </br>
+                    We think it's part of this category:
+                    <%= project.category %>
+                        </br>
+                        </br>
+                        </br>
+                        Check out all the other members
+                        <% for(i=0; i<count_members; i++) {%>
+                            <!-- ici ce sera les photos des membres qui s'afficheront au liejisdjqdddllu d'un bouton -->
+                            <a href='/profile/<%= project.members_array[i] %>'> <button type="submit"><%= project.members_array[i] %> </button> </a>
+                            </br>
+                            </br>
+                            <%  } %>
 
-    </br>
-    Interested people are:
-    XXXX
-
-    YYYY
-
+                                </br>
+                                Interested people are: XXXX YYYY </br>
+                                <span id="application_area" onclick="apply_new_input()">
+                                <button> Apply here </button>
+                                </span>
 </body>
+
+<script>
+    var test=0 //probablement rajouter un timer
+    function apply_new_input(){
+        if (test==0){
+        document.getElementById('application_area').innerHTML = '</br> <textarea id="test" style="width:300px; height:120px"> </textarea> </br>' +
+        '<form method="POST" action="/projects/' + '<%= project.name %>/application">' + '<button name="apply" value="member">Join the project</button> </form>';
+        test =1}
+    }
+</script>
+
 
 </html>
