--- a/views/singleprojectpage.ejs
+++ b/views/singleprojectpage.ejs
@@ -24,8 +24,13 @@ Sort of vitrine website and will let you signup and login etc ...
                     We think it's part of this category:
                     <%= project.category %>
                         </br>
+                        <%= 'Suis tu ce projet ?  ' + isCurious %>
                         </br>
+                        <span id = "isCurious_"> </span>
                         </br>
+                        <!-- members part starts here -->
+
+                        <%if (count_members>0) {%>
                         Check out all the other members
                         <% for(i=0; i<count_members; i++) {%>
                             <!-- ici ce sera les photos des membres qui s'afficheront au liejisdjqdddllu d'un bouton -->
@@ -33,19 +38,32 @@ Sort of vitrine website and will let you signup and login etc ...
                             </br>
                             </br>
                             <%  } %>
+                        <% } %>
 
-                                </br>
-                                Interested people are: XXXX YYYY </br>
-                                <span id="application_area" onclick="apply_new_input()">
-                                <button> Apply here </button>
-                                </span>
+                        <!-- curious guys start here -->
+
+                        <%if (count_curious>0) {%>Check out all the curious guys
+                        <% for(i=0; i<count_curious; i++) {%>
+                            <!-- ici ce sera les photos des membres qui s'afficheront au liejisdjqdddllu d'un bouton -->
+                            <a href='/profile/<%= project.curious_array[i].username %>'> <button type="submit"><%= project.curious_array[i].username %> </button> </a>
+                            </br>
+                            </br>
+                            <% } %>
+                        <% } %>
+
+
+                        <span id="application_area" onclick="apply_new_input()">
+                        <button> Apply here </button>
+                        </span>
 
     <!-- This part displays the curious button as long as the user is authentified. NB: Will need a check to removes the button once curious -->
-    <% if((auth)) { %>
-    <form method="POST" action="/projects/<%= project.name %>/curious">
-    <button name="curious" value="curiousabout"> Curious/interested </button> </form>
-    <%} %>
-
+    <% if((auth) && (!isCurious)) { %>
+    <form method="POST" action="/projects/<%= project.name %>/newcurious">
+    <button name="curious" value="true"> Curious/interested </button> </form>
+    <%} else { %>
+    <form method="POST" action="/projects/<%= project.name %>/removecurious">
+    <button name="curious" value="false"> Ne plus être curieux </button> </form>
+    <% } %>
 
     <!-- This is a if condition that checks if the guy is the leader and allows him to delete the project -->
     <% if(user.username == project.leader && (auth)) { %>
@@ -54,6 +72,7 @@ Sort of vitrine website and will let you signup and login etc ...
     <%} %>
 </body>
 
+    <button type = "submit" onclick="curiousClick(<%= isCurious %>)"> test moi </button>
 <script>
     var flag = 0
     function apply_new_input() {
@@ -64,6 +83,18 @@ Sort of vitrine website and will let you signup and login etc ...
         }
     }
 
+    var frontCurious = <%= isCurious %>;
+    
+
+    document.getElementById('isCurious_').innerHTML = frontCurious;
+
+
+    function curiousClick(isCurious) {
+        console.log(frontCurious);
+        frontCurious = (!frontCurious)
+        document.getElementById('isCurious_').innerHTML = frontCurious;
+    }
+    
 </script>
 
 
